Add the message-usually about the changes

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two"> <a href="linkedin.com/in/ramzi-dakhmouche"> LinkedIn </a></li>
+						<li><a href="#two"> <a href=""> Resume </a></li>
 						<li><a href="#three">Medium articles</a></li>
 						<li><a href="#four">College transcripts</a></li>
 						<li><a href="#five">Recommandation letters</a></li>
 						<li><a href="#six">Quotes I like</a></li>
-						<li><a href="#seven">Contact me</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -61,8 +60,9 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Linkedin profile</h3>
-									<p> My resume can be downloaded <a href="" > here </a>. </p>
+									<h3>Resume</h3>
+									<p> My resume can be downloaded <a href="" > here </a>. 
+									    Or through <a href="linkedin.com/in/ramzi-dakhmouche"> my linkedIn profile </a>.</p>
 								</div>
 							</section>
 
@@ -105,27 +105,7 @@
 									<p> Recommandation letters by two of my last year professors can be found <a href=""> here </a> and <a href=""> there. </a> </p> 
 								</div>
 							</section>
-						<!-- Seven -->
-							<section id="seven">
-								<div class="container">
-									<h3>Contact me</h3>
-									<p>If you have a question on my work or medium articles, you can get in touch with me by filling in this short form. If you have a job offer. Please, contact me by email. </p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section>
+
 						<!-- Eight -->
 						<!--
 							<section id="eight">
