--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two"> <a href=""> Resume </a></li>
+						<li><a href="#two">Resume</a></li>
 						<li><a href="#three">Medium articles</a></li>
 						<li><a href="#four">College transcripts</a></li>
 						<li><a href="#five">Recommandation letters</a></li>
@@ -61,8 +61,8 @@
 							<section id="two">
 								<div class="container">
 									<h3>Resume</h3>
-									<p> My resume can be downloaded <a href="" > here </a>. 
-									    Or through <a href="linkedin.com/in/ramzi-dakhmouche"> my linkedIn profile </a>.</p>
+									<p> My resume can be downloaded <a href="files/cv.pdf" download> here </a>. 
+									    Or through <a href="https://www.linkedin.com/in/ramzi-dakhmouche-514ab61b0/"> my linkedIn profile. </a></p>
 								</div>
 							</section>
 
@@ -73,10 +73,17 @@
 									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics. In case, you wanted to know (!), my next article will be on semi-supervised image classification using an auto-encoder (tutorial).</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://medium.com/@ramzisofo/elementary-analysis-of-a-time-series-5ec72942b19e" class="image"><img src="images/pic01.jpeg" alt="" /></a>
 											<div class="inner">
-												<h4 href="https://medium.com/@ramzisofo/elementary-analysis-of-a-time-series-5ec72942b19e">Elementary analysis of a time series</h4>
+												<h4>Elementary analysis of a time series</h4>
 												<p> Tutorial on a classical statistical prediction method, which sometimes serves as a good benchmark.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://medium.com/@ramzisofo/control-of-the-generalization-error-in-statistical-learning-theory-part-1-5750daf9e1d1" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Control of the Generalization Error in Statistical Learning theory (part 1)</h4>
+												<p> Article discussing generalization inequalities for ML algorithms.</p>
 											</div>
 										</article>
 									</div>
@@ -87,7 +94,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>College transcripts</h3>
-									<p> My 1st year Master's transcripts can be found <a href=""> here. </a> </p> 
+									<p> My 1st year Master's transcripts can be found <a href="files/Transcript.pdf" download> here. </a> <br />
+									    N.B. Please, note that 16/20 in the French system is equivalent to American A+.</p> 
 								</div>
 							</section>
 
@@ -95,14 +103,21 @@
 							<section id="five">
 								<div class="container">
 									<h3>Recent recommandation letters</h3>
-									<p> Recommandation letters by two of my last year professors can be found <a href=""> here </a> and <a href=""> there. </a> </p> 
+									<p> Recommandation letters by two of my last year professors can be found <a href="files/Recom.pdf" downlaod> here. </a><br />
+									    My professors contact details can be found on their webpages: <a href="https://www.imo.universite-paris-saclay.fr/~giraud/"> Prof. Giraud's </a> and
+									    <a href="https://www.imo.universite-paris-saclay.fr/~enriquez/"> Prof. Enriquez's. </a> <br /> 
+									    English translations of the letters are available <a href="files/Translations.pdf" download> here. </a> </p> 
 								</div>
 							</section>
 						<!-- Six -->
 							<section id="Six">
 								<div class="container">
 									<h3>This section lists some quotes I find interesting.</h3>
-									<p> Recommandation letters by two of my last year professors can be found <a href=""> here </a> and <a href=""> there. </a> </p> 
+									<div class="features">
+										<article>
+										<a href="#" class="image"><img src="images/Quote.jpg" alt="" class ="center"></a>
+										</article>
+									</div>
 								</div>
 							</section>
 
