--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Medium Articles</h3>
-									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics. In case, you wanted to know (!), my next article will be on semi-supervised image classification using an auto-encoder (tutorial).</p>
+									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics.</p>
 									<div class="features">
 										<article>
 											<a href="https://medium.com/@ramzisofo/elementary-analysis-of-a-time-series-5ec72942b19e" class="image"><img src="images/pic01.jpeg" alt="" /></a>
