--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<!-- Six -->
 							<section id="Six">
 								<div class="container">
-									<h3>This section lists some quotes I find interesting.</h3>
+									<h3>Some quotes I find interesting.</h3>
 									<div class="features">
 										<article>
 										<a href="#" class="image"><img src="images/Quote.jpg" alt="" class ="center"></a>
