--- a/index.html
+++ b/index.html
@@ -115,12 +115,15 @@
 									<h3>Some quotes I find interesting.</h3>
 									<div class="features">
 										<article>
-										<a href="#" class="image"><img src="images/Quote.jpg" alt="" class ="center"></a>
+										<a href="#" class="image"><img src="images/Quote.jpg" style="width: 28vw; min-width: 330px;" alt="" class ="center"></a>
+										</article>
+										<article>
+										<a href="#" class="image"><img src="images/Quote-Morse.png" style="width: 40vw; min-width: 330px;" alt="" class ="center"></a>
 										</article>
 									</div>
 								</div>
 							</section>
-
+							
 						<!-- Eight -->
 						<!--
 							<section id="eight">
