--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Ramzi D.</a></h1>
+					<h1 id="logo"><a href="#">Ramzi S. Dakhmouche</a></h1>
 					<p>Machine learning research passionate<br />
 					</a></p>
 				</header>
@@ -26,7 +26,7 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Resume</a></li>
 						<li><a href="#three">Medium articles</a></li>
-						<li><a href="#four">College transcripts</a></li>
+						<li><a href="#four">University transcripts</a></li>
 						<li><a href="#five">Recommandation letters</a></li>
 						<li><a href="#six">Quotes I like</a></li>
 					</ul>
