--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Resume</a></li>
-						<li><a href="#three">Medium articles</a></li>
-						<li><a href="#four">University transcripts</a></li>
-						<li><a href="#five">Recommandation letters</a></li>
-						<li><a href="#six">Quotes I like</a></li>
+						<li><a href="#two">Medium articles</a></li>
+						<li><a href="#three">University transcripts</a></li>
+						<li><a href="#four">Recommandation letters</a></li>
+						<li><a href="#five">Quotes I like</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -56,18 +55,15 @@
 									<p>With a background in Applied Mathematics, I am particularly interested in Reinforcement learning, Time Series, Signal Processing and passionate about Physics informed Machine learning approaches (given my love for Physics since I was a kid)... </p>
 								</div>
 							</section>
-
-						<!-- Two -->
-							<section id="two">
 								<div class="container">
 									<h3>Resume</h3>
 									<p> My resume can be downloaded <a href="files/cv.pdf" download> here </a>. 
 									    Or through <a href="https://www.linkedin.com/in/ramzi-dakhmouche-514ab61b0/"> my linkedIn profile. </a></p>
 								</div>
-							</section>
+
 
 						<!-- Three -->
-							<section id="three">
+							<section id="two">
 								<div class="container">
 									<h3>Medium Articles</h3>
 									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics.</p>
@@ -91,7 +87,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="three">
 								<div class="container">
 									<h3>College transcripts</h3>
 									<p> My 1st year Master's transcripts can be found <a href="files/Transcript.pdf" download> here. </a> <br />
@@ -100,7 +96,7 @@
 							</section>
 
 						<!-- Five -->
-							<section id="five">
+							<section id="four">
 								<div class="container">
 									<h3>Recent recommandation letters</h3>
 									<p> Recommandation letters by two of my last year professors can be found <a href="files/Recom.pdf" downlaod> here. </a><br />
@@ -110,9 +106,9 @@
 								</div>
 							</section>
 						<!-- Six -->
-							<section id="Six">
+							<section id="five">
 								<div class="container">
-									<h3>Some quotes I find interesting.</h3>
+									<h3>Some quotes I find interesting</h3>
 									<div class="features">
 										<article>
 										<a href="#" class="image"><img src="images/Quote.jpg" style="width: 28vw; min-width: 330px;" alt="" class ="center"></a>
