--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 							<section id="three">
 								<div class="container">
 									<h3>College transcripts</h3>
-									<p> My 1st year Master's transcripts can be found <a href="files/Transcript.pdf" download> here. </a> <br />
-									    N.B. Please, note that 16/20 in the French system is equivalent to American A+.</p> 
+									<p> My 3rd year Bachelor and 1st year Master's transcripts can be found <a href="files/Transcript.pdf" download> here. </a> <br />
+									    </p> 
 								</div>
 							</section>
 
@@ -99,10 +99,11 @@
 							<section id="four">
 								<div class="container">
 									<h3>Recent recommandation letters</h3>
-									<p> Recommandation letters by two of my last year professors can be found <a href="files/Recom.pdf" downlaod> here. </a><br />
+									<p> Recommendation letter by my M1 training director can be found <a href="files/Recom-prof-Blanchard.pdf"> here</a>. </p>
+									<p> Additional recommendation letters by two of my last year professors can be found <a href="files/Recom.pdf" downlaod> here</a>. <br />
 									    My professors contact details can be found on their webpages: <a href="https://www.imo.universite-paris-saclay.fr/~giraud/"> Prof. Giraud's </a> and
-									    <a href="https://www.imo.universite-paris-saclay.fr/~enriquez/"> Prof. Enriquez's. </a> <br /> 
-									    English translations of the letters are available <a href="files/Translations.pdf" download> here. </a> </p> 
+									    <a href="https://www.imo.universite-paris-saclay.fr/~enriquez/"> Prof. Enriquez's</a>. <br /> 
+									    English translations of the letters are available <a href="files/Translations.pdf" download> here</a>. </p> 
 								</div>
 							</section>
 						<!-- Six -->
