--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Medium articles</a></li>
 						<li><a href="#three">University transcripts</a></li>
-						<li><a href="#four">Recommandation letters</a></li>
+						<li><a href="#four">Recommendation letters</a></li>
 						<li><a href="#five">Quotes I like</a></li>
 					</ul>
 				</nav>
