--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<!-- Five -->
 							<section id="four">
 								<div class="container">
-									<h3>Recent recommandation letters</h3>
+									<h3>Recent letters of recommendation </h3>
 									<p> Recommendation letter by my M1 training director can be found <a href="files/Recom-prof-Blanchard.pdf"> here</a>. </p>
 									<p> Additional recommendation letters by two of my last year professors can be found <a href="files/Recom.pdf" downlaod> here</a>. <br />
 									    My professors contact details can be found on their webpages: <a href="https://www.imo.universite-paris-saclay.fr/~giraud/"> Prof. Giraud's </a> and
