--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Recent letters of recommendation </h3>
-									<p> Recommendation letter by my M1 training director can be found <a href="files/Recom-prof-Blanchard.pdf"> here</a>. </p>
+									<p> Recommendation letter by my M1 training director, Prof. Gilles Blanchard, can be found <a href="files/Recom-prof-Blanchard.pdf"> here</a>. </p>
 									<p> Additional recommendation letters by two of my last year professors can be found <a href="files/Recom-Dakhmouche.pdf" downlaod> here</a>. <br />
 									    My professors contact details can be found on their webpages: <a href="https://www.imo.universite-paris-saclay.fr/~giraud/"> Prof. Giraud's </a> and
 									    <a href="https://www.imo.universite-paris-saclay.fr/~enriquez/"> Prof. Enriquez's</a>. <br /> 
