--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
 									<p> My resume can be downloaded <a href="files/cv.pdf" download> here </a>. 
 									    Or through <a href="https://www.linkedin.com/in/ramzi-dakhmouche-514ab61b0/"> my linkedIn profile. </a></p>
 								</div>
-
+								<div class="container">
+									<h3> Some of the classes I particularly enjoyed, this year: </h3>
+									<p> As a <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/contenus-/master-mva-cours-161721.kjsp?RH=1242430202531"> Mathematics, Vision, Learning (MVL) </a> Master's student at <a href="https://ens-paris-saclay.fr/entites/laboratoires"> École Normale Supérieure (ENS) Paris-Saclay, </a> these are some of the classes I particularly appreciated this year: </p>
+									<ul>
+  									    <li> Reinforcement learning, by <a href="https://teopir.github.io/"> Dr. Matteo Pirotta, </a> <b> Facebook AI research. </b> </li>
+									    <li> Computational statistics, by <a href="https://sites.google.com/site/stephanieallassonniere/home"> Prof. Stéphanie Allasonnière </a>, <b> University of Paris. </b> </li>						    
+									    <li> <a href="https://sites.google.com/view/daniele-calandriello/teaching"> Graphs in machine learning, </a> by <a href="https://sites.google.com/view/daniele-calandriello/home"> Dr. Daniele Calandriello, </a> <b> DeepMind Paris. </b>
+									    <li> <a href="http://www.laurentoudre.fr/ast.html"> Learning for time series, </a> by <a href="http://www.laurentoudre.fr/"> Prof. Laurent Oudre </a>, <b> ENS Paris-Saclay </b> </li>
+									    <li>  Advanced topics in Markov chains, by <a href="https://scholar.google.fr/citations?user=_XE1LvQAAAAJ&hl=fr"> Prof. Eric Moulines, </a> <b> Ecole Polytechnique. </b> </li>
+									    <li> <a href="https://pages.saclay.inria.fr/emilie.chouzenoux/ECP/index.htm"> Large scale optimization, </a> by <a href="http://www-syscom.univ-mlv.fr/~chouzeno/RechercheEN.html"> Dr. Emilie Chouzenoux, </a> <b> Inria Saclay. </b>
+									</ul>
+								</div>
 
 						<!-- Three -->
 							<section id="two">
@@ -69,17 +80,31 @@
 									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics.</p>
 									<div class="features">
 										<article>
-											<a href="https://medium.com/@ramzisofo/elementary-analysis-of-a-time-series-5ec72942b19e" class="image"><img src="images/pic01.jpeg" alt="" /></a>
+											<a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a" class="image"><img src="images/pic01.jpeg" alt="" /></a>
 											<div class="inner">
-												<h4>Elementary analysis of a time series</h4>
-												<p> Tutorial on a classical statistical prediction method, which sometimes serves as a good benchmark.</p>
+												<h4> <a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a">  Topological Uncertainty for Deep learning models </a> </h4>
+												<p> An interesting a posteriori confidence score.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://medium.com/@ramzisofo/control-of-the-generalization-error-in-statistical-learning-theory-part-2-7815bf671749" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4> <a href="https://medium.com/@ramzisofo/control-of-the-generalization-error-in-statistical-learning-theory-part-2-7815bf671749"> Control of the Generalization Error in Statistical Learning theory (part 2) </a> </h4>
+												<p> Article discussing generalization inequalities for ML algorithms.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://medium.com/@ramzisofo/control-of-the-generalization-error-in-statistical-learning-theory-part-1-5750daf9e1d1" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Control of the Generalization Error in Statistical Learning theory (part 1)</h4>
+												<h4> <a href="https://medium.com/@ramzisofo/control-of-the-generalization-error-in-statistical-learning-theory-part-1-5750daf9e1d1"> Control of the Generalization Error in Statistical Learning theory (part 1) </a> </h4>
 												<p> Article discussing generalization inequalities for ML algorithms.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://medium.com/@ramzisofo/elementary-analysis-of-a-time-series-5ec72942b19e" class="image"><img src="images/pic01.jpeg" alt="" /></a>
+											<div class="inner">
+												<h4> <a href="https://medium.com/@ramzisofo/elementary-analysis-of-a-time-series-5ec72942b19e"> Elementary analysis of a time series </a> </h4>
+												<p> Tutorial on a classical statistical prediction method, which sometimes serves as a good benchmark.</p>
 											</div>
 										</article>
 									</div>
