--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics.</p>
 									<div class="features">
 										<article>
-											<a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a" class="image"><img src="images/pic01.jpeg" alt="" /></a>
+											<a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a" class="image"><img src="images/TU.jpg" alt="" /></a>
 											<div class="inner">
 												<h4> <a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a">  Topological Uncertainty for Deep learning models </a> </h4>
 												<p> An interesting a posteriori confidence score.</p>
