--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<article>
 											<a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a" class="image"><img src="images/TU.jpg" alt="" /></a>
 											<div class="inner">
-												<h4> <a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a">  Topological Uncertainty for Deep learning models </a> </h4>
+												<h4> <a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a">  Topological Uncertainty for deep learning models </a> </h4>
 												<p> An interesting a posteriori confidence score.</p>
 											</div>
 										</article>
