--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 					<p>Machine learning research passionate<br />
 					</a></p>
 				</header>
+				<ul class="icons">
+						<li><a href="https://github.com/Ramzisofo" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ramzi-dakhmouche-514ab61b0/" class="icon solid fa-linkedin"><span class="label"></span></a></li>
+				</ul>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Medium articles</a></li>
-						<li><a href="#three">University transcripts</a></li>
-						<li><a href="#four">Recommendation letters</a></li>
-						<li><a href="#five">Quotes I like</a></li>
+						<li><a href="#three">Recommendation letters</a></li>
+						<li><a href="#four">Quotes I like</a></li>
 					</ul>
 				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">ramzi.dakhmouche@ens-paris-saclay.fr</span></a></li>
-					</ul>
-				</footer>
+<!-- 				<footer>
+
+				</footer> -->
 			</section>
 
 		<!-- Wrapper -->
@@ -112,16 +112,16 @@
 							</section>
 
 						<!-- Four -->
-							<section id="three">
+<!-- 							<section id="three">
 								<div class="container">
 									<h3>College transcripts</h3>
 									<p> My 3rd year Bachelor and 1st year Master's transcripts can be found <a href="files/Transcript.pdf" download> here. </a> <br />
 									    </p> 
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Five -->
-							<section id="four">
+							<section id="three">
 								<div class="container">
 									<h3>Recent letters of recommendation </h3>
 									<p> Recommendation letter by my M1 training director, Prof. Gilles Blanchard, can be found <a href="files/Recom-prof-Blanchard.pdf"> here</a>. </p>
@@ -132,7 +132,7 @@
 								</div>
 							</section>
 						<!-- Six -->
-							<section id="five">
+							<section id="four">
 								<div class="container">
 									<h3>Some quotes I find interesting</h3>
 									<div class="features">
