--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</header>
 				<ul class="icons">
 						<li><a href="https://github.com/Ramzisofo" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/ramzi-dakhmouche-514ab61b0/" class="icon solid fa-linkedin"><span class="label"></span></a></li>
+						<li><a href="https://www.linkedin.com/in/ramzi-dakhmouche-514ab61b0/" class="icon solid fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 				<nav id="nav">
 					<ul>
