--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
 									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics.</p>
 									<div class="features">
 										<article>
+											<a href="https://medium.com/@ramzisofo/proximal-gradient-optimization-using-stochastic-approximation-d7db29ca8fb8" class="image"><img src="images/PGA.jpg" alt="" /></a>
+											<div class="inner">
+												<h4> <a href="https://medium.com/@ramzisofo/proximal-gradient-optimization-using-stochastic-approximation-d7db29ca8fb8">  Proximal Gradient Optimization using Stochastic Approximation </a> </h4>
+												<p> Ideas behind its proof of convergence. </p>
+											</div>
+										</article>
+										<article>
 											<a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a" class="image"><img src="images/TU.jpg" alt="" /></a>
 											<div class="inner">
 												<h4> <a href="https://medium.com/@ramzisofo/topological-uncertainty-for-deep-learning-models-e300046ce99a">  Topological Uncertainty for deep learning models </a> </h4>
