--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								</div>
 								<div class="container">
 									<h3> Some of the classes I particularly enjoyed, this year: </h3>
-									<p> As a <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/contenus-/master-mva-cours-161721.kjsp?RH=1242430202531"> Mathematics, Vision, Learning (MVL) </a> Master's student at <a href="https://ens-paris-saclay.fr/entites/laboratoires"> École Normale Supérieure (ENS) Paris-Saclay, </a> these are some of the classes I particularly appreciated this year: </p>
+									<p> As a <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/contenus-/master-mva-cours-161721.kjsp?RH=1242430202531"> Mathematics, Vision, Learning (MVL) </a> Master's student at <a href="https://ens-paris-saclay.fr/entites/laboratoires"> École Normale Supérieure (ENS) Paris-Saclay, </a> these are some of the classes I particularly liked this year: </p>
 									<ul>
   									    <li> Reinforcement learning, by <a href="https://teopir.github.io/"> Dr. Matteo Pirotta, </a> <b> Facebook AI research. </b> </li>
 									    <li> Computational statistics, by <a href="https://sites.google.com/site/stephanieallassonniere/publications-patents"> Prof. Stéphanie Allasonnière </a>, <b> University of Paris. </b> </li>						    
