--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 									    <li> <a href="https://pages.saclay.inria.fr/emilie.chouzenoux/ECP/index.htm"> Large scale optimization, </a> by <a href="http://www-syscom.univ-mlv.fr/~chouzeno/RechercheEN.html"> Dr. Emilie Chouzenoux, </a> <b> Inria Saclay. </b>
 									</ul>
 								</div>
+								<div class="container">
+									<h3> Master thesis update: </h3>
+									<p> Ericsson provisional patent filed: <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </p>
+									<p> Machine learning publication under preparation. </p> 
 
 						<!-- Three -->
 							<section id="two">
