--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
 								</div>
 								<div class="container">
 									<h3> Master thesis update: </h3>
-									<p> Ericsson provisional patent filed: <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </p>
-									<p> Machine learning publication under preparation. </p> 
+									<ul>
+									    <li> Ericsson provisional patent filed: <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </li>
+									    <li> Machine learning publication under preparation. </li> 
+									</ul>
 
 						<!-- Three -->
 							<section id="two">
