--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 				<!-- Main -->
 					<div id="main">
 						<!-- One -->
-							<section id="one">
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
@@ -54,7 +53,7 @@
 									</header>
 									<p>With a background in Applied Mathematics, I am particularly interested -both from a theoretical and applied perspective- by Reinforcement learning, Time Series, Signal Processing and passionate about Physics informed Machine learning approaches (given my love for Physics since I was a kid)... </p>
 								</div>
-							</section>
+							<section id="one">
 								<div class="container">
 									<h3>Resume</h3>
 									<p> My resume can be downloaded <a href="files/cv.pdf" download> here </a>. 
@@ -75,10 +74,10 @@
 								<div class="container">
 									<h3> Master thesis update: </h3>
 									<ul>
-									    <li> Ericsson provisional patent filed: <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </li>
-									    <li> Machine learning publication under preparation. </li> 
+										<li> Ericsson provisional <b> patent filed </b> : <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </li>
+										<li> Machine learning <b> publication </b> under preparation. </li> 
 									</ul>
-
+							</section>
 						<!-- Three -->
 							<section id="two">
 								<div class="container">
