--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<header class="major">
 										<h2>Research interests</h2>
 									</header>
-									<p>With a background in Applied Mathematics, I am particularly interested -both from a theoretical and applied perspective- by Reinforcement learning, Time Series, Signal Processing and passionate about Physics informed Machine learning approaches (given my love for Physics since I was a kid)... </p>
+									<p>With a background in Applied Mathematics, I am particularly passionate about Reinforcement learning, Time Series analysis and Signal Processing but also Physics informed Machine learning approaches (given my love for Physics since I was a kid)... </p>
 								</div>
 							<section id="one">
 								<div class="container">
