--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<h3> Master thesis update: </h3>
 									<ul>
 										<li> Ericsson provisional <b> patent filed </b> : <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </li>
-										<li> Machine learning <b> publication under preparation</b>. </li> 
+										<li> Machine learning <b> conference publication under preparation</b>. </li> 
 									</ul>
 							</section>
 						<!-- Three -->
