--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
 									    <li>  Advanced topics in Markov chains, by <a href="https://scholar.google.fr/citations?user=_XE1LvQAAAAJ&hl=fr"> Prof. Eric Moulines, </a> <b> Ecole Polytechnique. </b> </li>
 									    <li> <a href="https://pages.saclay.inria.fr/emilie.chouzenoux/ECP/index.htm"> Large scale optimization, </a> by <a href="http://www-syscom.univ-mlv.fr/~chouzeno/RechercheEN.html"> Dr. Emilie Chouzenoux, </a> <b> Inria Saclay. </b>
 									</ul>
-									<h3> Master thesis update: </h3>
+									<h3> Master thesis update: September 15th, 2022 </h3>
 									<ul>
 										<li> Ericsson provisional <b> patent filed </b> : <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </li>
-										<li> Machine learning <b> conference publication under preparation</b>. </li> 
+										<li> Master thesis defended. </li>
+										<li> Machine learning <b> conference paper under preparation</b>. </li> 
 									</ul>
 							</section>
 						<!-- Three -->
