--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<ul>
 										<li> Ericsson provisional <b> patent filed </b> : <em> Multi-Task Bandits method for personalized sample efficient network parameter optimization. </em> </li>
 										<li> Master thesis defended. </li>
-										<li> Machine learning <b> conference paper under preparation</b>. </li> 
+										<li> Machine learning <b> paper under preparation</b>. </li> 
 									</ul>
 							</section>
 						<!-- Three -->
