--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<ul>
   									    <li> Reinforcement learning, by <a href="https://teopir.github.io/"> Dr. Matteo Pirotta, </a> <b> Facebook AI research. </b> </li>						    
 									    <li> <a href="https://sites.google.com/view/daniele-calandriello/teaching"> Graphs in machine learning, </a> by <a href="https://sites.google.com/view/daniele-calandriello/home"> Dr. Daniele Calandriello, </a> <b> DeepMind Paris. </b>
-									    <li> Audio signal analysis, by <a href="http://www.cmap.polytechnique.fr/~bacry/"> Prof. Emmanuel Bacry, </a> <b> CNRS & University Paris-Dauphine. </b> </li>
+									    <li> <a href="https://sites.google.com/site/stephanieallassonniere/enseignements/methodes-mcmc-et-applications"> Computational statistics, </a> by Prof. Stéphanie Allasonnière, Université Paris Cité. </b> </li>
 									    <li> <a href="http://www.laurentoudre.fr/ast.html"> Learning for time series, </a> by <a href="http://www.laurentoudre.fr/"> Prof. Laurent Oudre </a>, <b> ENS Paris-Saclay. </b> </li>
 									    <li>  Advanced topics in Markov chains, by <a href="https://scholar.google.fr/citations?user=_XE1LvQAAAAJ&hl=fr"> Prof. Eric Moulines, </a> <b> Ecole Polytechnique. </b> </li>
 									    <li> <a href="https://pages.saclay.inria.fr/emilie.chouzenoux/ECP/index.htm"> Large scale optimization, </a> by <a href="http://www-syscom.univ-mlv.fr/~chouzeno/RechercheEN.html"> Dr. Emilie Chouzenoux, </a> <b> Inria Saclay. </b>
