--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Medium Articles</h3>
-									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. You can follow me on medium if you're interested by such topics.</p>
+									<p>I have recently started writing medium articles and tutorials in which I share and explain classical but also state-of-the-art machine learning algorithms, methods and insights. Feel free follow me on medium if you're interested by such topics ! </p>
 									<div class="features">
 										<article>
 											<a href="https://medium.com/@ramzisofo/proximal-gradient-optimization-using-stochastic-approximation-d7db29ca8fb8" class="image"><img src="images/PGA.jpg" alt="" /></a>
