--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<header class="major">
 										<h2>Research interests</h2>
 									</header>
-									<p>With a background in Applied Mathematics, I am particularly passionate about Reinforcement learning, Time series analysis and Graph signal processing but also Physics informed Machine learning approaches (given my love for Physics since I was a kid)... </p>
+									<p>With a background in Applied Mathematics, I am particularly passionate about Reinforcement learning, Time series analysis and Graph signal processing, with applications to biological and engineering systems. </p>
 								</div>
 							<section id="one">
 								<div class="container">
