--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
 								</div>
 							<section id="one">
 								<div class="container">
+									<header class="major">
+										<h2>Publications & Working Papers</h2>
+									</header>
+									<ul>
+  									    <li> Ramzi Dakhmouche, Ivan Lunati, and Hossein Gorji. "Robust Symbolic Regression for Network Trajectory Inference." <br> Transactions on Machine Learning Research 2025. <br> International Conference on Learning Representations 2024 MLGenX. </li>						    
+									    <li> Robust Deep Operator Learning. <i> Submitted </i>  </li> 
+									    <li> Ramzi Dakhmouche, and Hossein Gorji. Network System Forecasting Despite Topology Perturbation. <i> In preparation </i></li>
+										<li> Ramzi Dakhmouche, Ivan Lunati, and Hossein Gorji. Scalable Uncertainty-Aware Symbolic Regression for Network Model Discovery.  <i> In preparation </i> </li>
+									</ul>
+								</div>
+								<div class="container">
 									<h3>Resume</h3>
 									<p> My resume can be downloaded <a href="files/cv.pdf" download> here </a>. 
 									    </p>
