--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							</section> -->
 
 						<!-- Five -->
-							<section id="three">
+<!-- 							<section id="three">
 								<div class="container">
 									<h3>Recent letters of recommendation </h3>
 									<p> Recommendation letter by my M1 training director, Prof. Gilles Blanchard, can be found <a href="files/Recom-prof-Blanchard.pdf"> here</a>. </p>
@@ -150,7 +150,7 @@
 									    <a href="https://www.imo.universite-paris-saclay.fr/~enriquez/"> Prof. Enriquez's</a>. <br /> 
 									</p> 
 								</div>
-							</section>
+							</section> -->
 						<!-- Six -->
 							<section id="four">
 								<div class="container">
