--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<header class="major">
 										<h2>Research interests</h2>
 									</header>
-									<p>With a background in applied mathematics and machine learning, I am particularly passionate about <i> Graph Time Series Forecasting </i> and <i> Graph Reinforcement Learning</i>, with applications to biological and engineering systems. </p>
+									<p> Broadly interested in reliable machine learning, I am currently particularly excited about <i> Distributional Robustness </i> and <i> Learning for Network Dynamical Systems </i>, with applications to biological and engineering systems. </p>
 								</div>
 							<section id="one">
 								<div class="container">
