--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Ramzi S. Dakhmouche</a></h1>
-					<p>Machine learning research passionate<br />
+					<p>Machine Learning Researcher <br />
 					</a></p>
 				</header>
 				<ul class="icons">
